--- a/style.css
+++ b/style.css
@@ -7,9 +7,14 @@ h1 {
     
 }
 .links{
-    list-style-type: none;
-    padding: 0%;
-    margin: auto;
+    background: pink;
+    border: 3px solid blue;
+    /* CHANGE ME */
+    padding: 32px;
+    text-align: center;
+    margin: 12px;
+
+    
 }
 
 .links li{
